--- a/app/src/main/res/layout/add_category_fragment.xml
+++ b/app/src/main/res/layout/add_category_fragment.xml
@@ -14,6 +14,7 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         android:orientation="vertical"
+        android:padding="12dp"
         tools:listitem="@layout/catogary_list"
 
 
