--- a/app/src/main/res/layout/catogary_list.xml
+++ b/app/src/main/res/layout/catogary_list.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_height="match_parent"
+
     android:padding="20dp">
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:id="@+id/image_categorylist"/>
+        android:id="@+id/image_categorylist"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="5dp"
+        android:background="#DCD1D1"
+        tools:src="@drawable/ic_add_black_24dp"
+
+        />
+
 
     <TextView
         android:id="@+id/categoryname_textview_categorylist"
-        android:layout_width="285dp"
-        android:layout_height="120dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_toEndOf="@+id/image_categorylist"
-        android:layout_toRightOf="@+id/image_categorylist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image_categorylist"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        android:background="#DDD056"
         tools:text="TextView" />
-
 
 </RelativeLayout>
 
