--- a/app/src/main/res/layout/category_list_fragment.xml
+++ b/app/src/main/res/layout/category_list_fragment.xml
@@ -15,7 +15,7 @@
         app:spanCount="2"
         android:orientation="vertical"
         android:padding="12dp"
-        tools:listitem="@layout/catogary_list"
+        tools:listitem="@layout/catogary_content_list"
 
 
 
