--- a/app/src/main/res/layout/add_details_fragment.xml
+++ b/app/src/main/res/layout/add_details_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_add_details_fragment"
     android:layout_width="match_parent"
+    android:background="#FBFBFB"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
