--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    
+
     <ImageView
+        android:id="@+id/image_user_profile"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:id="@+id/image_user_profile"
         android:layout_gravity="center"
-        android:layout_marginTop="70dp"/>
-    
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview_profile_name"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:padding="20dp"
-        android:hint="name"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="70dp" />
+
 
     <TextView
+        android:id="@+id/textview_profile_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textview_profile_email"
-        android:padding="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
-        android:hint="email"
-        android:layout_marginTop="30dp"/>
+        android:hint="Name"
+        android:padding="20dp" />
+
+    <TextView
+        android:id="@+id/textview_profile_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        android:hint="Email"
+        android:padding="20dp" />
 
 </LinearLayout>
+
