--- a/app/src/main/res/layout/add_details_fragment.xml
+++ b/app/src/main/res/layout/add_details_fragment.xml
@@ -5,7 +5,8 @@
     android:id="@+id/layout_add_details_fragment"
     android:layout_width="match_parent"
     android:background="#FFFFFF"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidline_center_adddetailsfragment"
@@ -17,11 +18,12 @@
 
     <ImageButton
         android:id="@+id/imageView_add_details_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="188dp"
-        android:layout_marginLeft="188dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginTop="52dp"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidline_center_adddetailsfragment"
         app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
@@ -29,13 +31,13 @@
 
     <EditText
         android:id="@+id/edittext_add_details_fragment"
-        android:layout_width="162dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="124dp"
-        android:layout_marginLeft="124dp"
-        android:layout_marginBottom="60dp"
-        android:padding="10dp"
+        android:layout_marginStart="@dimen/textboxes_sides_margin"
+        android:layout_marginLeft="@dimen/textboxes_sides_margin"
+        android:layout_marginBottom="@dimen/textbox_margintop"
+        android:padding="@dimen/textboxes_padding"
         android:textStyle="bold"
         android:background="@drawable/rounded_text"
         android:ems="10"
@@ -46,15 +48,16 @@
 
     <Button
         android:id="@+id/savebutton_add_details_fragment"
-        android:layout_width="239dp"
-        android:layout_height="79dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/button_sidemargins"
+        android:layout_marginLeft="@dimen/button_sidemargins"
         android:layout_marginBottom="92dp"
-        android:text="Save"
+        android:text="Save "
         app:layout_constraintBottom_toTopOf="@+id/edittext_add_details_fragment"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
