--- a/app/src/main/res/layout/catogary_content_list.xml
+++ b/app/src/main/res/layout/catogary_content_list.xml
@@ -5,12 +5,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:id="@+id/catogary_content_list"
-    android:padding="20dp">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/image_categorylist"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="5dp"
         android:background="#DCD1D1"
@@ -22,13 +22,13 @@
 
     <TextView
         android:id="@+id/categoryname_textview_categorylist"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/image_categorylist"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="8dp"
         android:textStyle="bold"
         android:background="#DDD056"
+        android:padding="@dimen/textboxes_padding"
         tools:text="TextView" />
 
 </RelativeLayout>
