--- a/app/src/main/res/layout/timeline_content.xml
+++ b/app/src/main/res/layout/timeline_content.xml
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
+    android:layout_margin="@dimen/textboxes_padding"
+    android:padding="@dimen/textboxes_padding"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
-        app:cardCornerRadius="2dp">
+        app:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#EDBFB0"
+            android:padding="@dimen/textboxes_padding">
 
             <ImageView
                 android:id="@+id/image_timeline"
                 android:layout_width="match_parent"
-                android:layout_height="190dp" />
+                android:scaleType="fitXY"
+                android:layout_height="@dimen/login_edittext_margintop" />
 
             <TextView
                 android:id="@+id/textview_timeline_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/image_timeline"
+
                 android:background="@drawable/rounded_text"
                 android:textStyle="bold"
                 android:text="Name"/>
 
             <TextView
                 android:id="@+id/textview_timeline_date"
-                android:layout_width="150dp"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textview_timeline_name"
                 android:background="@drawable/rounded_text"
@@ -41,19 +45,7 @@
                 android:layout_marginTop="10dp"
                 />
 
-            <TextView
-                android:id="@+id/textview_timeline_time"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/textview_timeline_date"
-                android:layout_marginStart="86dp"
-                android:layout_marginLeft="65dp"
-                android:layout_marginTop="-19dp"
 
-                android:textStyle="bold"
-                android:text="Time"
-                android:layout_toRightOf="@id/textview_timeline_date"
-                android:background="@drawable/rounded_text" />
 
 
         </RelativeLayout>
