--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Profile" />
+            android:title="Updateprofile" />
         <item
             android:id="@+id/nav_timeline"
             android:icon="@drawable/ic_menu_gallery"
@@ -16,5 +16,9 @@
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Logout" />
+        <item
+            android:id="@+id/nav_displayprofile"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="My Profile" />
     </group>
 </menu>
