--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="textboxes_sides_margin">20dp</dimen>
+    <dimen name="textboxes_padding">20dp</dimen>
+    <dimen name="textbox_margintop">30dp</dimen>
+    <dimen name="button_sidemargins">160dp</dimen>
+    <dimen name="login_edittext_margintop">180dp</dimen>
 </resources>
