--- a/app/src/main/res/layout/display_user_details_fragment.xml
+++ b/app/src/main/res/layout/display_user_details_fragment.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="#947898"
+        android:textStyle="bold"
+        android:text="My Profile"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+         />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
-       android:layout_marginTop="@dimen/textbox_margintop"
-        android:background="#F8AFA9"
+
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
+
+
 
     <ImageView
         android:id="@+id/image_user_profile"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/textbox_margintop"
-        android:scaleType="fitXY"
+        android:background="#ffffff"
         />
 
     </LinearLayout>
