--- a/app/src/main/res/layout/timeline_content.xml
+++ b/app/src/main/res/layout/timeline_content.xml
@@ -4,19 +4,20 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/textboxes_padding"
-    android:padding="@dimen/textboxes_padding"
+
+
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="4dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#EDBFB0"
-            android:padding="@dimen/textboxes_padding">
+            android:background="#ffffff"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/image_timeline"
@@ -29,8 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/image_timeline"
-
-                android:background="@drawable/rounded_text"
+                android:background="#301934"
+                android:textColor="#ffffff"
                 android:textStyle="bold"
                 android:text="Name"/>
 
@@ -39,8 +40,10 @@
                 android:layout_width="190dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textview_timeline_name"
-                android:background="@drawable/rounded_text"
+                android:background="#301934"
+
                 android:textStyle="bold"
+                android:textColor="#ffffff"
                 android:text="Date"
                 android:layout_marginTop="10dp"
                 />
