--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/imageView_nav_header"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/imageview_width_nav_header"
+        android:layout_height="@dimen/imageview_width_nav_header"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="fitCenter"
@@ -25,14 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="username"
+        android:text="@string/my_gallery"
         android:id="@+id/textview_username_nav_header"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <TextView
-        android:id="@+id/textView_useremail_nav_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email" />
+
 
 </LinearLayout>
