--- a/app/src/main/res/layout/timeline_fragment.xml
+++ b/app/src/main/res/layout/timeline_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/side_nav_bar">
+    android:background="#947898">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
